development-runs/137/k8s/validate/resources/13-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: sme-app
  labels:
    app: api
    io.kompose.service: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
